<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".view.mainmenu.MainMenuFragment">

    <TextView
        android:id="@+id/mainMenuTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="24sp"
        android:textAllCaps="true"
        android:textStyle="bold"

        android:textColor="@color/title_color"
        android:background="@color/title_background"

        android:layout_marginTop="40dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="60dp"

        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/mainMenuImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_menu_logo_content_desc"

        android:layout_marginTop="50dp"
        android:padding="5dp"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <Button
        android:id="@+id/mainMenuStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/main_menu_button_text"
        android:background="@color/main_menu_button_background"

        android:layout_marginTop="130dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="60dp"

        android:text="@string/main_menu_start_button" />

    <Button
        android:id="@+id/mainMenuHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/main_menu_button_background"
        android:textColor="@color/main_menu_button_text"

        android:layout_marginTop="50dp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="30dp"
        android:text="@string/main_menu_history_button" />

</LinearLayout>